# com_music_with_rust

./: Cargo.toml  README.md  init.nix  these_bad.txt
src/client/: client.rs  client_optimized.rs
src/experimental/: experimental.rs
src/quic/client/: client.rs
src/quic/client/client_util/: cert.rs  mod.rs
src/quic/server/: server.rs  server_util.rs
src/server/: server.rs  server_struct.rs
src/server/server_struct/: song_processing.rs
